# hstech-nlp-quant-factor

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FACTOR_REPORT.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  Makefile  README.md  README_CURSOR_MIGRATION.md  README_NEW.md  README_batch_production.md  README_data_cleaning.md  README_news_pipeline.md  REFACTOR_CHECKLIST.md  SECURITY.md  SECURITY_CHECKLIST.md  UX_GUIDE.md  data_pipe.py  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt  run.sh  sentiment.py  verify_commands.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
data/: prices.csv  sample_news.csv
data/processed/: ic_results.csv  (+2 more)
docs/: CI-RUNBOOK.md  RELEASE-CHECKLIST.md  TROUBLESHOOTING.md  configuration.md  data_lineage.md  faq.md  glossary.md  legal.md  limitations.md  quickstart.md  real-data.md  rollback.md
news_out/: articles_recent.csv  articles_recent.jsonl  checkpoint.json  run_metrics.csv  seen_uris.jsonl
reports/: daily_factors_20260208_013739.csv  daily_sentiment_factors.csv  day5_completion_summary.md  demo_sentiment_results.json  factor_report_20260208_011621.json  factor_report_20260208_013325.json  factor_report_20260208_013722.json  factor_report_20260208_013739.json  factor_style_correlation.csv  factor_validation_report.md  ic_daily.csv  ic_monthly.csv  interview_story_script.md  one_pager.md  quickstart_report.json  resume_project_description.md  trading_cost_analysis.md
scripts/: daily_run.sh  make_social_preview.py  run_real.py  setup_project.sh  smoke.sh  verify.sh
src/: analyze_factors.py  clean_data.py  data_pipe.py  data_pipe_demo.py  eval.py  factors.py  generate_factors.py  pipeline.py  plotting.py  prepare_sas_data.py  sentiment.py  sentiment_lm.py  sentiment_top.py  statistical_tests.py  validate_factor.py
tests/: test_cli.py  test_e2e.py
(+17 files in other folders)
